# a1a_gen

./: CMakeLists.txt  Makefile  README.md  main.c  main.h  output.c  output.h  player.c  player.h  rng.cpp  rng.h  table.c  table.h
